--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -1,14 +1,20 @@
-.Track {
-  background-color: #ffffff;
-  border: 1px solid #dadadf;
-  border-radius: 2px;
-  margin-bottom: 16px;
-  text-align: center;
+.TrackBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.Track figure,
-h5 {
-  margin: 0 0;
+.RatingContainer,
+.CommentsContainer {
+  display: flex;
+  align-items: center;
+}
+
+.RatingNumber {
+  font-weight: bold;
+  margin-left: 5px;
+  font-size: 1rem;
 }
 
 .Star {
@@ -22,11 +28,3 @@ h5 {
 .StarOutline:hover {
   color: #f85032;
 }
-
-.RatingNumber {
-  font-weight: bold;
-  margin-left: 5px;
-  font-size: 1rem;
-}
-
-  
