--- a/src/styles/Event.module.css
+++ b/src/styles/Event.module.css
@@ -1,43 +1,12 @@
-.eventPageContainer {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  
-  .eventContent {
-    background-color: #f8f9fa;
-    border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .eventComments {
+.Event {
     background-color: #ffffff;
-    border-radius: 8px;
-    padding: 15px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border: 1px solid #dadadf;
+    border-radius: 2px;
+    margin-bottom: 16px;
+    text-align: center;
   }
   
-  .eventImage {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
+  .Event figure,
+  h5 {
+    margin: 0 0;
   }
-  
-  .eventTitle {
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-  
-  .eventDate {
-    font-size: 1.2rem;
-    color: #6c757d;
-    margin-bottom: 10px;
-  }
-  
-  .eventDescription {
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #333;
-  }
-  
