--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -33,6 +33,9 @@
   color: white !important;
   text-transform: uppercase;
   white-space: nowrap;
+  text-align: center; /* Centers the text inside its parent */
+  display: block; /* Ensures it's treated as a block-level element */
+  margin: 0 auto; /* Optional for additional centering */
 }
 
 .TrackCenter {
@@ -62,6 +65,11 @@
   background: rgba(0, 0, 0, 0.6);
   color: white;
 }
+
+.TrackOwner {
+  color: white;
+}
+
 
 .StarRating {
   display: flex;
