--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -33,16 +33,16 @@
   color: white !important;
   text-transform: uppercase;
   white-space: nowrap;
-  text-align: center; /* Centers the text inside its parent */
-  display: block; /* Ensures it's treated as a block-level element */
-  margin: 0 auto; /* Optional for additional centering */
+  text-align: center;
+  display: block;
+  margin: 0 auto;
 }
 
 .TrackCenter {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 75px;
+  padding: 60px;
   position: relative;
 }
 
@@ -81,9 +81,10 @@
   font-weight: bold;
   right: 10px;
   bottom: 10px;
-  color: transparent;
+  color: #ffec40;
   background: linear-gradient(45deg, #f7e5ad, #ffeb78, #ffec40);
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -91,7 +92,8 @@
   font-size: 14px;
   background: linear-gradient(45deg, #f7e5ad, #ffeb78, #ffec40);
   -webkit-background-clip: text;
-  color: transparent;
+  -webkit-text-fill-color: transparent;
+  color: #ffec40;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
