--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -1,11 +1,22 @@
+.TrackContainerRow {
+  margin-left: -5px;
+  margin-right: -5px;
+}
+
+.TrackCol {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .TrackContainer {
   position: relative;
-  max-width: 300px;
-  margin: 15px;
+  max-width: 100%;
+  margin: 5px 0;
   background-color: #333;
   border-radius: 8px;
   overflow: hidden;
   color: white;
+  box-sizing: border-box;
 }
 
 .TrackImage {
@@ -27,7 +38,7 @@
 .TrackTitle {
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 0.75rem;
+  font-size: 0.6rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -45,7 +56,7 @@
 .ProfileName {
   flex: 1;
   text-align: left;
-  font-size: 0.75rem;
+  font-size: 0.5rem;
 }
 
 .TrackTitleWrapper {
@@ -83,7 +94,6 @@
   font-size: 0.4rem;
   color: lightgray;
 }
-
 
 .StarRating {
   display: flex;
