--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
 }
 
 .Main {
-  padding-top: 120px;
+  padding-top: 100px;
 }
 
 .Content {
@@ -40,6 +40,7 @@ h1 {
   animation: glowAnimation 1.5s ease-in-out infinite alternate;
   margin-bottom: 20px;
   padding-left: 10px;
+  text-align: center;
 }
 
 @keyframes glowAnimation {
@@ -51,6 +52,24 @@ h1 {
   }
   100% {
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7), 0 0 25px rgba(0, 255, 255, 0.7), 0 0 50px rgba(0, 255, 255, 0.7);
+  }
+}
+
+@media (min-width: 576px) {
+  h1 {
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 6rem;
   }
 }
 
