--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,10 +1,44 @@
 .NavBar {
-  background-color: #ffffff;
-  border: 1px solid #dadadf;
+  background-color: #f7f7f7;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding-top: 20px;
 }
 
 .NavLink {
   padding: 5px;
+}
+
+.Active i {
+  color: #2142b2;
+}
+
+.NavLink {
+  padding: 5px;
+  font-size: 1rem;
+}
+
+@media (max-width: 576px) {
+  .NavLink {
+    font-size: 0.9rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .NavLink {
+    font-size: 0.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .NavLink {
+    font-size: 0.6rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .NavLink {
+    font-size: 0.7rem;
+  }
 }
 
 .Active i {
