--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -88,7 +88,45 @@
 }
 
 .TrackContainer .d-flex {
-  gap: 10px; /* Add spacing between cards */
+  gap: 10px;
   flex-wrap: wrap;
-  justify-content: flex-start; /* Align cards to the left */
+  justify-content: flex-start;
 }
+
+.TrackItem {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.TrackImage {
+  width: 100%;
+  height: 200px; /* Set the height of the album cover */
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+}
+
+.TrackDetails {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.PlayButton {
+  margin-top: 10px;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.PlayButton:hover {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+
