--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -124,7 +124,7 @@
 }
 
 .AverageRating {
-  font-size: 0.75rem;
+  font-size: 0.5rem;
   font-weight: bold;
   right: 10px;
   bottom: 10px;
@@ -136,7 +136,7 @@
 }
 
 .Star {
-  font-size: 14px;
+  font-size: 12px;
   background: linear-gradient(45deg, #f7e5ad, #ffeb78, #ffec40);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -149,21 +149,19 @@
   margin-right: 5px;
 }
 
+.rating-dropdown {
+  font-size: 0.5rem; /* Adjust font size */
+  padding: 0.25rem 0.5rem; /* Adjust padding for a smaller button */
+}
+
 .dropdown-item {
   font-size: 0.25rem;
   padding: 5px 10px;
 }
 
-.rating-dropdown .btn-link {
+.btn-link {
   font-size: 0.5rem;
   padding: 5px 10px;
-}
-
-.rating-dropdown .dropdown-menu {
-  font-size: 0.5rem;
-  padding: 0;
-  margin: 0;
-  width: 120px;
 }
 
 .rating-dropdown .dropdown-menu {
@@ -175,3 +173,14 @@
 .DropdownWrapper {
   flex: 0;
 }
+
+@media (max-width: 768px) {
+  .rating-dropdown .dropdown-item {
+    font-size: 0.4rem;
+  }
+
+  .rating-dropdown {
+    font-size: 0.4rem;
+  }
+}
+
