--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,6 +49,18 @@ h1 {
   text-align: center;
 }
 
+.h4 {
+  font-family: 'Impact', sans-serif;
+  text-align: left;
+  font-size: 2rem;
+  margin-bottom: 0;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
 @keyframes glowAnimation {
   0% {
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7), 0 0 25px rgba(0, 255, 255, 0.7), 0 0 50px rgba(0, 255, 255, 0.7);
