--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -81,7 +81,12 @@
   color: #333;
   text-align: center;
   margin-bottom: 20px;
+  font-family: 'Impact', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: bold;
 }
+
 
 .TracksList {
   display: flex;
@@ -121,3 +126,4 @@
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+
