Format all files ready for deployment

--- a/src/styles/Event.module.css
+++ b/src/styles/Event.module.css
@@ -103,6 +103,6 @@
 
 @media (max-width: 768px) {
   .EventCard {
-    width: 100%; /* Make cards take up full width on smaller screens */
+    width: 100%;
   }
 }
