--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -28,3 +28,17 @@
     font-size: 1rem;
   }
 }
+
+@media (max-width: 400px) {
+  .NavBar {
+    flex-direction: column;
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .NavLink {
+    font-size: 0.6rem;
+    padding: 3px;
+  }
+}
