--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -75,7 +75,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 45%;
   transform: translate(-50%, -50%);
   transition: background-color 0.3s ease;
@@ -150,8 +150,8 @@
 }
 
 .rating-dropdown {
-  font-size: 0.5rem; /* Adjust font size */
-  padding: 0.25rem 0.5rem; /* Adjust padding for a smaller button */
+  font-size: 0.5rem;
+  padding: 0.25rem 0.5rem;
 }
 
 .dropdown-item {
@@ -183,4 +183,3 @@
     font-size: 0.4rem;
   }
 }
-
