--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,7 @@
 .App {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #f8f8f8;
-  background-image: url('https://res.cloudinary.com/dmylma7bf/image/upload/v1737499222/cntsplvasl2ad7d5u7pd.jpg');
+  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1737499222/cntsplvasl2ad7d5u7pd.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -34,13 +34,18 @@
 }
 
 h1 {
-  font-family: 'Impact', sans-serif;
+  font-family: "Impact", sans-serif;
   font-size: 3rem;
   color: #fff;
-  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5), 0 0 25px rgba(0, 255, 255, 0.3), 0 0 50px rgba(0, 255, 255, 0.3);
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5), 0 0 25px rgba(0, 255, 255, 0.3),
+    0 0 50px rgba(0, 255, 255, 0.3);
   letter-spacing: 2px;
   text-transform: uppercase;
-  background: linear-gradient(45deg, rgba(0, 255, 255, 0.4), rgba(255, 0, 255, 0.4));
+  background: linear-gradient(
+    45deg,
+    rgba(0, 255, 255, 0.4),
+    rgba(255, 0, 255, 0.4)
+  );
   -webkit-background-clip: text;
   background-clip: text;
   animation: glowAnimation 1.5s ease-in-out infinite alternate;
@@ -51,13 +56,16 @@ h1 {
 
 @keyframes glowAnimation {
   0% {
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7), 0 0 25px rgba(0, 255, 255, 0.7), 0 0 50px rgba(0, 255, 255, 0.7);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7), 0 0 25px rgba(0, 255, 255, 0.7),
+      0 0 50px rgba(0, 255, 255, 0.7);
   }
   50% {
-    text-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7), 0 0 35px rgba(0, 255, 255, 1), 0 0 70px rgba(0, 255, 255, 1);
+    text-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7), 0 0 35px rgba(0, 255, 255, 1),
+      0 0 70px rgba(0, 255, 255, 1);
   }
   100% {
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7), 0 0 25px rgba(0, 255, 255, 0.7), 0 0 50px rgba(0, 255, 255, 0.7);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7), 0 0 25px rgba(0, 255, 255, 0.7),
+      0 0 50px rgba(0, 255, 255, 0.7);
   }
 }
 
@@ -66,7 +74,6 @@ h1 {
     font-size: 4rem;
   }
 }
-
 
 * {
   box-sizing: border-box;
