--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -110,13 +110,28 @@
 .ImageContainer {
   flex: 1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  height: 100%;
 }
 
-.ImageContainer img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+/* Branding Text */
+.Branding {
+  font-size: 5rem;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* Slogan Text */
+.Slogan {
+  font-size: 0.8rem;
+  color: #f7f7f7;
+  margin-top: 5px;
+  margin-left: 20px;
+  text-align: right;
 }
