--- a/src/App.module.css
+++ b/src/App.module.css
@@ -34,7 +34,7 @@
 }
 
 h1 {
-  font-family: "Impact", sans-serif;
+  font-family: "Exo 2", sans-serif;
   font-size: 3rem;
   color: #fff;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5), 0 0 25px rgba(0, 255, 255, 0.3),
