--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -25,7 +25,7 @@
 
 @media (min-width: 1024px) {
   .NavLink {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 }
 
@@ -41,4 +41,11 @@
     font-size: 0.6rem;
     padding: 3px;
   }
+}
+
+.Branding {
+  font-family: "Exo 2", sans-serif;
+  font-size: 1rem !important;
+  font-weight: bold;
+  text-transform: lowercase;
 }
