--- a/src/styles/Event.module.css
+++ b/src/styles/Event.module.css
@@ -1,23 +1,22 @@
 .EventCardWrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start; /* Align items to the start, removes extra space */
+  justify-content: flex-start;
   gap: 20px;
-  padding-right: 0; /* Ensure no right padding */
-  margin-right: 0; /* Ensure no right margin */
+  padding-right: 0;
+  margin-right: 0;
 }
 
 .EventCard {
-  width: 48%; /* Adjust the width to fit better in the container */
-  max-width: 100%; /* Ensure card doesn't overflow */
+  width: 48%;
+  max-width: 100%;
   margin-bottom: 20px;
   border: none;
   border-radius: 12px;
-  overflow: hidden;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   background-color: #f9f9f9;
-  padding: 0; /* Optional: Remove padding to prevent overflow */
+  padding: 0;
 }
 
 .EventCard:hover {
@@ -33,8 +32,10 @@
 }
 
 .CardBody {
-  padding: 20px; /* Adjust padding as needed */
+  padding: 20px;
   background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 12px;
+  box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
 .EventHeader {
@@ -55,13 +56,14 @@
 }
 
 .EventTitle {
-  font-size: 12px;
+  font-size: 20px;
   font-weight: bold;
+  text-transform: uppercase;
   color: #1e2a47;
 }
 
 .EventDate {
-  font-size: 10px;
+  font-size: 12px;
   color: #5a5a5a;
   padding-right: 20px;
 }
@@ -72,7 +74,8 @@
 
 .EventGenre,
 .EventLocation {
-  font-size: 10px;
+  font-size: 12px;
+  padding-bottom: 5px;
   color: #707070;
 }
 
@@ -105,4 +108,13 @@
   .EventCard {
     width: 100%;
   }
+}
+
+i {
+  font-size: 1.6rem;
+  padding-right: 20px;
+}
+
+.cardWithBorderRadius {
+  border-radius: 1rem;
 }
