--- a/src/styles/Event.module.css
+++ b/src/styles/Event.module.css
@@ -60,6 +60,7 @@
   font-weight: bold;
   text-transform: uppercase;
   color: #1e2a47;
+  padding-left: 10px;
 }
 
 .EventDate {
@@ -81,8 +82,7 @@
 
 .EventDescription {
   font-size: 12px;
-  color: #333333;
-  margin-top: 10px;
+  color: #707070;
   line-height: 1.5;
 }
 
@@ -99,8 +99,8 @@
 
 .DropdownWrapper {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 15px;
+  right: 25px;
   z-index: 10;
 }
 
@@ -117,4 +117,10 @@
 
 .cardWithBorderRadius {
   border-radius: 1rem;
+}
+
+.truncatedDescription {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
