--- a/src/App.module.css
+++ b/src/App.module.css
@@ -89,7 +89,7 @@ a:hover {
 }
 
 a:hover i {
-  color: #2142b2;
+  color: #007bff;
   transition: color ease-in-out 0.3s;
 }
 
@@ -99,7 +99,7 @@ input[type="file"] {
 
 i {
   color: #cfced3;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   padding: 7px;
   vertical-align: middle;
 }
@@ -107,7 +107,7 @@ i {
 i:hover {
   cursor: pointer;
   transition: color ease-in-out 0.3s;
-  color: #2142b2;
+  color: #007bff;
 }
 
 figure {
