--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -45,7 +45,7 @@
 }
 
 .Input:focus {
-  border-color: #2142b2;
+  border-color: 007bff;
   box-shadow: 0 0 8px rgba(33, 66, 178, 0.2);
 }
 
@@ -56,7 +56,7 @@
   text-align: center;
   letter-spacing: 0.15em;
   text-transform: uppercase;
-  color: #2142b2;
+  color: #555555;
   margin-bottom: 20px;
 }
 
