--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -22,23 +22,23 @@
   color: #242a3d;
   padding-left: 40px;
   margin-bottom: 16px;
-  font-size: 1rem;
+  font-size: 0.75rem;
   width: 100%;
 }
 
 .SearchIcon {
   position: absolute;
-  font-size: 1.2rem;
+  font-size: 0.75rem;
   padding: 9px;
-  padding-left: 15px;
-  top: 50%;
-  transform: translateY(-50%);
+  padding-left: 17px;
+  z-index: 1;
 }
 
 .SearchIcon:hover {
   cursor: default;
   color: #cfced3;
 }
+
 
 .TrackContainerRow {
   margin-left: -5px;
