--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -78,7 +78,7 @@
 }
 
 .PlayButton {
-  background-color: rgba(0, 0, 0, 0.0);
+  background-color: rgb(255, 255, 255, 0.3);
   border: none;
   padding: 15px;
   font-size: 2.5rem;
@@ -95,7 +95,7 @@
 }
 
 .PlayButton:hover {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #ffffff;
 }
 
 .PlayButton i {
