--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -128,6 +128,11 @@
   display: flex;
   align-items: center;
   gap: 3px;
+  color: #ffec40;
+  background: linear-gradient(45deg, #f7e5ad, #ffeb78, #ffec40);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 .AverageRating {
